  EntityConnectionServer, maintenance thread now keeps local connections alive via isLocalConnectionValid() along with disconnecting idle ones
  EntityServerMonitorTest added some tests
  UiUtil.runWithProgressBar() overloaded with a northPanel parameter
  DefaultExceptionHandlerTest added
  EntityUiUtilTest improved
  EntityUiUtil.createTristateCheckBox() bug fixed
  EntityUiUtilTest fixed broken tests
  DefaultEntityConnection, redundant synchronized instance removed
  MethodLogger, minor refactoring
  Sonar run, some minor improvements
  MethodLogger serialization bug introduced during refactoring fixed
  final keyword added to catch clauses, quite the overkill but gets rid of annoying warnings in IntelliJ 13
  EntityTableModel.getTableDataAsDelimitedString() added
  Databases.setInsertHint(), getInsertHint() added, used in DefaultEntityConnection.insert()
  EntityGeneratorModel no longer uses Properties.primaryKeyProperty() but rather Properties.columnProperty() along with a call to setPrimaryKeyIndex()
  DefaultEntityEditModel.getModifiedObserver() no longer final
  Entity.getModifiedState() renamed to getModifiedObserver() for consistency
0.9.1
  Entity.isNull() only returns null if all primary key values are null, so primary keys can now contain null values
  Util.collate() problematic wildcard removed
  logback and slf4j latest versions used
  logback-core added as compile time dependency
  EntityPanelProvider.equals() improved, now takes the underlying EntityModel class into account
  EntityEditModel.getEntityNewObserver() added
  DefaultEntityEditModel.isEntityNew() is no longer final
  EntityEditPanel, update and delete actions enabled states now depend on the entityNewObserver provided by the underlying edit model
  EntityPanel, bug fixed, navigation was broken when it came to detail panels, always selected first available panel
  EntityPanel, navigation and panel state constants changed to enums